assets/scss/style.scss
/*!------------------------------------------------------------------
[MAIN STYLESHEET]

PROJECT:	Roxo HTML
VERSION:	1.0.0
-------------------------------------------------------------------*/
@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Montserrat:300,400,500,600,700&display=swap");
body {
  font-family: "Josefin Sans", sans-serif;
  font-size: 16px;
  color: #9D9EA5; }

h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  color: #00113E; }

p {
  font-size: 16px;
  color: #9D9EA5; }

h1 {
  font-size: 60px; }

h2 {
  font-size: 50px; }

h3 {
  font-size: 30px; }

h4 {
  font-size: 25px; }

h5 {
  font-size: 18px; }

h6 {
  font-size: 15px;
  font-weight: 300; }

.btn {
  font-family: "Montserrat", sans-serif;
  border: none;
  color: #fff !important;
  padding: 20px 45px;
  border-radius: 0; }
  .btn:focus {
    box-shadow: none; }
  @media (max-width: 991px) {
    .btn {
      padding: 17px 40px; } }
  .btn .btn-area {
    display: block;
    overflow: hidden; }
    .btn .btn-area span {
      position: relative;
      display: block;
      padding: 2px 0;
      transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1);
      transform-origin: left center; }
      .btn .btn-area span::after {
        content: attr(data-text);
        position: absolute;
        top: 150%;
        left: 0;
        transform: skewY(30deg);
        transform-origin: left center;
        transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1); }
  .btn:hover .btn-area span {
    transform: translateY(-150%) skewY(7deg); }
    .btn:hover .btn-area span::after {
      transform: skewY(-7deg); }
  .btn:visited .btn-area span {
    transform: translateY(-150%) skewY(7deg); }
    .btn:visited .btn-area span::after {
      transform: skewY(-7deg); }

.btn-sm {
  padding: 15px 40px !important; }

.btn-sm-rounded {
  border-radius: 40px; }

.btn-primary {
  background: #EAA4A4;
  color: #fff; }
  .btn-primary:hover {
    background: #e07b7b; }

.btn-secondary {
  background: #ADD6D2;
  color: #fff; }
  .btn-secondary:hover {
    background: #8bc5bf; }

body {
  background: #fff; }

.section-title {
  margin-bottom: 70px; }
  @media (max-width: 991px) {
    .section-title {
      text-align: center; } }
  .section-title h2 {
    font-weight: 300;
    letter-spacing: 2px;
    text-transform: uppercase;
    margin-bottom: 15px; }
    @media (max-width: 991px) {
      .section-title h2 {
        font-size: 40px; } }
  .section-title p {
    font-size: 20px;
    font-weight: 300; }

.form-control {
  background: transparent;
  border-radius: 0;
  margin-bottom: 30px;
  padding: 0 0 10px 0;
  border-width: 0 0 1px 0;
  border-color: #EAA4A4;
  font-weight: 300;
  letter-spacing: 1px;
  -webkit-appearance: none;
  height: 42px; }
  .form-control:focus {
    box-shadow: none;
    background: transparent;
    border-color: #9D9EA5; }

select.form-control {
  height: 42px !important;
  position: relative; }

.select-wrapper {
  position: relative; }
  .select-wrapper::before {
    content: '';
    position: absolute;
    width: 16px;
    height: 10px;
    background: url("../images/angle-down-select.svg");
    background-size: contain;
    background-repeat: no-repeat;
    right: 15px;
    top: 50%;
    transform: translateY(-80%); }

textarea.form-control {
  height: auto; }

.site-navigation {
  padding: 20px 0;
  background: #fff;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
  transition: all 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53); }
  @media (max-width: 991px) {
    .site-navigation {
      background: #fff;
      margin: 10px;
      border-radius: 5px;
      top: 0;
      width: calc(100% - 20px);
      box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09); } }
  @media (max-width: 575px) {
    .site-navigation {
      padding: 15px; } }
  .site-navigation .navbar-brand {
    padding: 0;
    margin: 0; }
    .site-navigation .navbar-brand img {
      max-width: 78px; }
  @media (max-width: 991px) {
    .site-navigation .nav-item {
      text-align: center; } }
  .site-navigation .nav-item .nav-link {
    font-family: "Montserrat", sans-serif;
    color: #00113E;
    transition: all .3s ease;
    padding: 15px 18px;
    position: relative; }
  .site-navigation .nav-item:last-child {
    margin-left: 15px; }
  .site-navigation .navbar-toggler {
    outline: 0;
    padding: 0; }
    .site-navigation .navbar-toggler .icon-bar {
      height: 2px;
      width: 25px;
      transition: all 0.2s;
      background: #EAA4A4;
      display: block; }
      .site-navigation .navbar-toggler .icon-bar:not(:last-child) {
        margin-bottom: 5px; }
      .site-navigation .navbar-toggler .icon-bar:nth-child(1) {
        transform: rotate(45deg);
        transform-origin: 10% 10%; }
      .site-navigation .navbar-toggler .icon-bar:nth-child(2) {
        opacity: 0;
        filter: alpha(opacity=0); }
      .site-navigation .navbar-toggler .icon-bar:nth-child(3) {
        transform: rotate(-45deg);
        transform-origin: 10% 90%; }
    .site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(1) {
      transform: rotate(0); }
    .site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(2) {
      opacity: 1;
      filter: alpha(opacity=1); }
    .site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(3) {
      transform: rotate(0); }
  .site-navigation.nav-bg {
    padding: 12px 0;
    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09); }
    @media (max-width: 575px) {
      .site-navigation.nav-bg {
        padding: 15px; } }

.site-hero {
  position: relative;
  height: 100vh;
  background-size: cover;
  background-position: center center;
  display: flex;
  align-items: center;
  justify-content: center; }
  @media (max-width: 991px) {
    .site-hero {
      height: auto;
      padding: 200px 0; } }
  @media (max-width: 575px) {
    .site-hero {
      padding: 150px 0; } }
/* ... */

